--- a/service.yaml
+++ b/service.yaml
@@ -1,12 +1,21 @@
-apiVersion: v1
-kind: Service
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: bms-service
+  name: bms-deployment
+  labels:
+    app: bms
 spec:
+  replicas: 2
   selector:
-    app: bmswebapp     
-  ports:
-    - protocol: TCP
-      port: 80         
-      targetPort: 80   
-  type: LoadBalancer
+    matchLabels:
+      app: bms
+  template:
+    metadata:
+      labels:
+        app: bms
+    spec:
+      containers:
+      - name: bms
+        image: deeksha-ganesh/bms:latest
+        ports:
+        - containerPort: 80
