--- a/service.yaml
+++ b/service.yaml
@@ -1,21 +1,12 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Service
 metadata:
-  name: bms-deployment
-  labels:
-    app: bms
+  name: bms-service
 spec:
-  replicas: 2
   selector:
-    matchLabels:
-      app: bms
-  template:
-    metadata:
-      labels:
-        app: bms
-    spec:
-      containers:
-      - name: bms
-        image: deeksha-ganesh/bms:latest
-        ports:
-        - containerPort: 80
+    app: bms
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: LoadBalancer
