--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: bms
-        image: deeksha-ganesh/bms:latest
+        image: deeksha-ganesh/bms:latest   # matches Jenkins
         ports:
         - containerPort: 80
